// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List Should render correct amount of item 1`] = `
<div
  className="makeStyles-root-1"
>
  <Memo(ListItem)
    description="test"
    id={1}
    image="src"
    key="1"
    rate={1}
    title="Title 1"
  />
  <Memo(ListItem)
    description="test"
    id={2}
    image="src"
    key="2"
    rate={1}
    title="Title 2"
  />
  <Memo(ListItem)
    description="test"
    id={3}
    image="src"
    key="3"
    rate={1}
    title="Title 3"
  />
</div>
`;

exports[`List Should render empty status insted of items if array is empty 1`] = `
<div
  className="makeStyles-root-1"
>
  <Empty />
</div>
`;

exports[`List Should render loading status insted of items 1`] = `
<div
  className="makeStyles-root-1"
>
  <Loader />
</div>
`;
